Fixed bug where header menu items didnt show

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -8,7 +8,7 @@
 			/>
 		</a>
 
-		<div class="mobile-menu" style="max-height: 0; padding: 0;" #mobileMenu>
+		<div class="mobile-menu collapsed" #mobileMenu>
 			<button class="menu-item" mat-button (click)="openDownload()">
 				<mat-icon>get_app</mat-icon> Download
 			</button>
