--- a/frontend/src/app/header/download/download.component.html
+++ b/frontend/src/app/header/download/download.component.html
@@ -1,20 +1,20 @@
 <h1 style="text-align: center; margin-top: 24px;">
 	Download
-	<b *ngIf="!found">Tivoli Cloud VR</b>
-	<b *ngIf="found" class="wiggle">
+	<b *ngIf="!loaded">Tivoli Cloud VR</b>
+	<b *ngIf="loaded" class="wiggle">
 		<span>T</span>
 		<span>i</span>
 		<span>v</span>
 		<span>o</span>
 		<span>l</span>
 		<span>i</span>
-		<span style="padding-left: 0.25em"></span>
+		<span style="padding-left: 0.25em;"></span>
 		<span>C</span>
 		<span>l</span>
 		<span>o</span>
 		<span>u</span>
 		<span>d</span>
-		<span style="padding-left: 0.25em"></span>
+		<span style="padding-left: 0.25em;"></span>
 		<span>V</span>
 		<span>R</span>
 	</b>
@@ -43,11 +43,11 @@
 </ng-container>
 <ng-container *ngIf="correctPassword">
 	<mat-progress-bar
-		*ngIf="!found"
+		*ngIf="!loaded"
 		mode="indeterminate"
 		style="margin-top: 16px; margin-bottom: 24px;"
 	></mat-progress-bar>
-	<ng-container *ngIf="found">
+	<ng-container *ngIf="loaded">
 		<div class="platform-table">
 			<div>
 				<h2>
@@ -64,13 +64,15 @@
 				<a
 					mat-flat-button
 					color="primary"
-					[href]="releasesPath + '/' + fileName"
+					[href]="release.platforms.windows.url"
 				>
-					Download {{ fileSize }}
-					<span style="opacity: 0.75;">{{ fileName }}</span>
+					Download {{ release.platforms.windows.size }}
+					<span style="opacity: 0.75;">
+						{{ release.platforms.windows.filename }}
+					</span>
 				</a>
 			</div>
-			<div [class.disabled]="true">
+			<div>
 				<h2>
 					<svg
 						xmlns="http://www.w3.org/2000/svg"
@@ -80,10 +82,17 @@
 							d="M979.042 925.188c-17.954 41.477-39.206 79.657-63.828 114.759-33.563 47.853-61.044 80.976-82.222 99.37-32.83 30.192-68.006 45.654-105.672 46.533-27.041 0-59.652-7.694-97.611-23.303-38.085-15.536-73.084-23.23-105.086-23.23-33.563 0-69.56 7.694-108.061 23.23-38.561 15.609-69.625 23.743-93.376 24.55-36.12 1.538-72.123-14.364-108.06-47.78-22.938-20.006-51.627-54.302-85.997-102.888-36.875-51.883-67.191-112.047-90.942-180.639C12.751 781.703 0 709.96 0 640.504c0-79.562 17.192-148.183 51.627-205.687 27.063-46.19 63.066-82.625 108.127-109.373 45.06-26.748 93.749-40.378 146.182-41.25 28.69 0 66.312 8.874 113.066 26.315 46.622 17.5 76.557 26.374 89.682 26.374 9.812 0 43.068-10.376 99.443-31.064 53.313-19.185 98.307-27.129 135.168-24 99.883 8.062 174.923 47.436 224.828 118.372-89.33 54.126-133.52 129.936-132.64 227.188.806 75.751 28.287 138.788 82.295 188.84 24.476 23.23 51.81 41.183 82.222 53.934-6.595 19.127-13.557 37.447-20.958 55.035zM749.964 23.75c0 59.374-21.692 114.81-64.928 166.122-52.176 61-115.286 96.248-183.724 90.686a184.836 184.836 0 0 1-1.378-22.497c0-56.999 24.813-117.998 68.878-167.874 21.999-25.253 49.978-46.25 83.907-63 33.856-16.5 65.88-25.625 95.999-27.187.88 7.937 1.246 15.875 1.246 23.75z"
 						/>
 					</svg>
-					Mac
+					macOS
 				</h2>
-				<a mat-flat-button color="primary">
-					Planned for the future
+				<a
+					mat-flat-button
+					color="primary"
+					[href]="release.platforms.macos.url"
+				>
+					Download {{ release.platforms.macos.size }}
+					<span style="opacity: 0.75;">
+						{{ release.platforms.macos.filename }}
+					</span>
 				</a>
 			</div>
 			<div [class.disabled]="true">
@@ -109,7 +118,9 @@
 		</div>
 		<div class="current-info">
 			<h3>
-				<span style="font-size: 1.25em;">Version {{ version }}</span>
+				<span style="font-size: 1.25em;"
+					>Version {{ release.version }}</span
+				>
 				<br />
 				<a
 					href="https://docs.tivolicloud.com/changelog"
@@ -121,7 +132,7 @@
 			<h3>
 				Released
 				<br />
-				{{ releaseDate | date: "MMMM dd, y" }}
+				{{ release.releaseDate | date: "MMMM dd, y" }}
 			</h3>
 		</div>
 	</ng-container>
