Added experimental under macOS download

--- a/frontend/src/app/header/download/download.component.html
+++ b/frontend/src/app/header/download/download.component.html
@@ -21,7 +21,7 @@
 	today!
 </h1>
 <p style="text-align: center;">
-	The alpha version of Tivoli is incomplete and doesn't represent the final
+	The alpha version of Tivoli is unfinished and doesn't represent the final
 	product
 	<br />
 	Expect bugs and issues which you can
@@ -94,6 +94,9 @@
 						{{ release.platforms.macos.filename }}
 					</span>
 				</a>
+				<p style="margin: 0; margin-top: 8px;">
+					Experimental!
+				</p>
 			</div>
 			<div [class.disabled]="true">
 				<h2>
