--- a/frontend/src/app/header/download/download.component.html
+++ b/frontend/src/app/header/download/download.component.html
@@ -94,9 +94,9 @@
 						{{ release.platforms.macos.filename }}
 					</span>
 				</a>
-				<p style="margin: 0; margin-top: 8px;">
+				<!-- <p style="margin: 0; margin-top: 8px;">
 					Experimental!
-				</p>
+				</p> -->
 			</div>
 			<div [class.disabled]="true">
 				<h2>
