--- a/frontend/src/app/user/files/folder-view/folder-view.component.html
+++ b/frontend/src/app/user/files/folder-view/folder-view.component.html
@@ -29,13 +29,13 @@
 					'url(' + file.url + '?' + previewCache + ')'
 				"
 			></div>
-			<div
+			<!-- <div
 				class="preview contain"
 				*ngIf="file.type == 'model'"
 				[style.backgroundImage]="
 					'url(/api/render?url=' + file.url + ')'
 				"
-			></div>
+			></div> -->
 			<video
 				class="preview"
 				*ngIf="file.type == 'video'"
