--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -17,17 +17,17 @@
 		</h1>
 		<div class="buttons">
 			<button
-				style="padding: 4px 24px"
+				style="padding: 4px 24px;"
 				mat-flat-button
 				color="primary"
-				(click)="openDownload()"
+				routerLink="/download"
 			>
 				<mat-icon>get_app</mat-icon>
 				Download
 			</button>
-			<span style="margin: 0 16px"></span>
+			<span style="margin: 0 16px;"></span>
 			<a
-				style="padding: 4px 24px"
+				style="padding: 4px 24px;"
 				mat-flat-button
 				href="https://docs.tivolicloud.com"
 				target="_blank"
@@ -48,20 +48,24 @@
 				communication in rich, persistent virtual worlds.
 			</h2> -->
 			<div style="padding: 8px 0;"></div>
-			<h2>
+			<h2 style="font-weight: 400;">
 				<mat-icon>local_florist</mat-icon> comfortable
 				<b>human-centric communication</b> in virtual reality
 			</h2>
-			<h2>
+			<h2 style="font-weight: 400;">
 				<mat-icon>public</mat-icon>
 				<b> persistent user created</b> virtual worlds owned by the
 				users
 			</h2>
-			<h2>
+			<h2 style="font-weight: 400;">
 				<mat-icon>group</mat-icon> capable of hosting
 				<b>hundreds of avatars</b> in the same space
 			</h2>
-			<h2>
+			<h2 style="font-weight: 400;">
+				<mat-icon>security</mat-icon> <b>safe and gentle moderation</b>
+				provided throughout worlds
+			</h2>
+			<h2 style="font-weight: 400;">
 				<mat-icon>developer_board</mat-icon>
 				extensive platform designed for
 				<b>artists and developers</b>
