--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -6,7 +6,7 @@ $bgDim: 0.2;
 	color: #fff;
 	position: relative;
 	overflow: hidden;
-	height: 546px; // needs to be manually calculated
+	height: 620px; // manual
 
 	// background-image: linear-gradient(0deg, rgba(#000, 0.1), rgba(#000, 0.1)),
 	// 	url(/assets/header.jpg);
@@ -48,6 +48,8 @@ $bgDim: 0.2;
 
 	.content {
 		padding: 96px 0;
+		margin-top: 64px; // header ontop
+
 		position: absolute;
 		top: 0;
 		left: 0;
