--- a/frontend/src/app/header/header.component.scss
+++ b/frontend/src/app/header/header.component.scss
@@ -8,7 +8,7 @@ $mobileMaxWidth: 1160px;
 		top: 0;
 		left: 0;
 		right: 0;
-		z-index: 99999999;
+		z-index: 999;
 		background: linear-gradient(
 			180deg,
 			rgba(#000, 0.5),
