Updated home page which is work in progress

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -38,38 +38,191 @@
 		</div>
 	</div>
 </div>
-<div class="container">
-	<div class="row">
-		<div class="col">
-			<!-- <h2 style="margin: 32px 0;">
-				Designed for human communication in VR at great scale, Tivoli
-				Cloud VR's platform is capable of hosting hundreds of avatars in
-				the same space, providing comfortable human-centric
-				communication in rich, persistent virtual worlds.
-			</h2> -->
-			<div style="padding: 8px 0;"></div>
-			<h2 style="font-weight: 400;">
-				<mat-icon>local_florist</mat-icon> comfortable
-				<b>human-centric communication</b> in virtual reality
-			</h2>
-			<h2 style="font-weight: 400;">
-				<mat-icon>public</mat-icon>
-				<b> persistent user created</b> virtual worlds owned by the
-				users
-			</h2>
-			<h2 style="font-weight: 400;">
-				<mat-icon>group</mat-icon> capable of hosting
-				<b>hundreds of avatars</b> in the same space
-			</h2>
-			<h2 style="font-weight: 400;">
-				<mat-icon>security</mat-icon> <b>safe and gentle moderation</b>
-				provided throughout worlds
-			</h2>
-			<h2 style="font-weight: 400;">
-				<mat-icon>developer_board</mat-icon>
-				extensive platform designed for
-				<b>artists and developers</b>
-			</h2>
+<div class="info">
+	<div class="container">
+		<div class="row align-items-center" style="padding-bottom: 0;">
+			<div class="col">
+				<h1 class="icon-title" style="font-weight: 400;">
+					<mat-icon>public</mat-icon> Persistent user-created virtual
+					worlds
+				</h1>
+				<h2 style="font-weight: 400;">
+					Create your very own worlds where you can build together
+					with others and
+					<br />
+					express your imagination knowing that nobody can take it
+					away from you.
+					<br />
+					<br />
+					Hosted on your own hardware or soon available on-demand from
+					us.
+					<br />
+					Find more information on our docs on
+					<a
+						target="_blank"
+						href="https://docs.tivolicloud.com/worlds/host-a-world-advanced"
+					>
+						how to host a world
+					</a>
+				</h2>
+			</div>
 		</div>
 	</div>
+	<div class="container-fluid" style="padding: 0 64px;">
+		<div class="row align-items center">
+			<div class="col">
+				<img
+					src="https://dummyimage.com/1920x1005&text=%20"
+					alt="Silence"
+				/>
+				<p>Silence 🌼🌿🍄 by Caitlyn</p>
+			</div>
+			<div class="col">
+				<img
+					src="https://dummyimage.com/1920x1005&text=%20"
+					alt="Silence"
+				/>
+			</div>
+			<div class="col">
+				<img
+					src="https://dummyimage.com/1920x1005&text=%20"
+					alt="Silence"
+				/>
+			</div>
+			<div class="col">
+				<img src="/assets/screenshots/solace.jpg" alt="Solace" />
+				<p>Solace by Monoglu</p>
+			</div>
+			<div class="col">
+				<img
+					src="/assets/screenshots/tanks-corner-bar.jpg"
+					alt="Tank's Corner Bar"
+				/>
+				<p>Tank's Corner Bar 🍸</p>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="info">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-md-7">
+				<h1 class="icon-title">
+					<mat-icon>group</mat-icon> Hundreds of people in the same
+					space
+				</h1>
+				<h2></h2>
+			</div>
+			<div class="col-md-5">
+				<img src="https://dummyimage.com/1920x540&text=%20" alt="" />
+			</div>
+		</div>
+	</div>
+</div>
+<div class="info">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-md-7">
+				<h1 class="icon-title">
+					<mat-icon>local_florist</mat-icon> Comfortable human
+					interaction
+				</h1>
+				<h2>
+					Be together with your friends and family and truly feel
+					their presence. It's incomparable to video calling because
+					you can naturally express yourself more than you'd believe.
+				</h2>
+			</div>
+			<div class="col-md-5">
+				<img
+					src="/assets/screenshots/fairies.jpg"
+					alt="Two cute fairies"
+				/>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="info">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-md-7">
+				<h1 class="icon-title">
+					<mat-icon>security</mat-icon> Safe moderation provided
+					throughout
+				</h1>
+				<h2></h2>
+			</div>
+			<div class="col-md-5">
+				<img src="https://dummyimage.com/1920x540&text=%20" alt="" />
+			</div>
+		</div>
+	</div>
+</div>
+<div class="info">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-md-7">
+				<h1 class="icon-title">
+					<mat-icon>developer_board</mat-icon> Extensive platform for
+					developers
+				</h1>
+				<h2></h2>
+			</div>
+			<div class="col-md-5">
+				<img src="https://dummyimage.com/1920x540&text=%20" alt="" />
+			</div>
+		</div>
+	</div>
+</div>
+<div class="info">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-md-7">
+				<h1 class="icon-title">
+					<mat-icon>code</mat-icon> Free and open source
+				</h1>
+				<h2>
+					Under the AGPLv3 license, we are
+					<a
+						target="_blank"
+						href="https://www.gnu.org/philosophy/free-sw.html"
+					>
+						free software</a
+					>.
+					<br />
+					Use Tivoli however you like for any purpose.
+					<br /><br />
+					Written using C++ with Qt and JavaScript, you can find the
+					<a
+						target="_blank"
+						href="https://git.tivolicloud.com/tivolicloud/interface"
+					>
+						source code here</a
+					>.
+				</h2>
+			</div>
+			<div class="col-md-5">
+				<img
+					src="/assets/screenshots/gitlab.jpg"
+					alt="Tivoli's git repo"
+				/>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="footer">
+	<p
+		style="
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			margin-bottom: 4px;
+		"
+	>
+		Tivoli is made with lots of love and care
+		<mat-icon style="color: #f44336; margin-left: 4px;">favorite</mat-icon>
+	</p>
+	<p style="opacity: 0.7;">
+		Copyright &copy; {{ year }} Tivoli Cloud VR, Inc. All rights reserved.
+	</p>
 </div>
