--- a/frontend/src/app/header/download/download.component.html
+++ b/frontend/src/app/header/download/download.component.html
@@ -64,7 +64,11 @@
 						release.platforms.windows.size
 					}})
 				</p> -->
-				<p><b>Windows 10 64-bit</b></p>
+				<p>
+					<b>Windows 10 64-bit</b> ({{
+						release.platforms.windows.size
+					}})
+				</p>
 			</mat-card>
 			<mat-card class="mat-elevation-z2">
 				<img src="/assets/logos/macos.svg" />
@@ -81,7 +85,11 @@
 						release.platforms.macos.size
 					}})
 				</p> -->
-				<p><b>macOS 11</b> or higher</p>
+				<p>
+					<b>macOS 11</b> or higher ({{
+						release.platforms.macos.size
+					}})
+				</p>
 			</mat-card>
 			<mat-card class="mat-elevation-z2">
 				<img src="/assets/logos/linux.svg" />
@@ -93,22 +101,33 @@
 				>
 					Download for Linux
 				</button>
-				<p>
-					<b>2018<!--(Glibc 2.24)--></b> or higher
-				</p>
+				<p><b>Glibc 2.24</b> or higher</p>
 			</mat-card>
 			<mat-menu #linuxMenu="matMenu">
-				<button mat-menu-item>
-					.AppImage
-				</button>
-				<button mat-menu-item>
-					.deb
+				<a mat-menu-item [href]="release.platforms.linux.url">
+					.AppImage ({{ release.platforms.linux.size }})
+				</a>
+				<a
+					mat-menu-item
+					[href]="
+						release.platforms.linux.url.replace('.AppImage', '.deb')
+					"
+				>
+					.deb (~560 MB)
 					<span style="opacity: 0.5;">&ndash; dpkg -i</span>
-				</button>
-				<button mat-menu-item>
-					.pacman
+				</a>
+				<a
+					mat-menu-item
+					[href]="
+						release.platforms.linux.url.replace(
+							'.AppImage',
+							'.pacman'
+						)
+					"
+				>
+					.pacman (~560 MB)
 					<span style="opacity: 0.5;">&ndash; pacman -U</span>
-				</button>
+				</a>
 			</mat-menu>
 		</div>
 		<div class="current-info">
