Updated sso redirecting text to match service

--- a/frontend/src/app/auth/sso/sso-redirecting/sso-redirecting.component.html
+++ b/frontend/src/app/auth/sso/sso-redirecting/sso-redirecting.component.html
@@ -1,12 +1,13 @@
-<h2 style="margin-top: 0;">
-	Redirecting to Tivoli Cloud VR Git...
+<h2 style="margin-top: 0; font-weight: 400;">
+	Redirecting to <span style="font-weight: 500;">Tivoli {{ data.name }}</span
+	>...
 </h2>
 <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-<p style="margin-bottom: 0;">
+<!-- <p style="margin-bottom: 0;">
 	<img
-		style="height: 1.2em; margin-bottom: -2px; margin-right: 8px"
+		style="height: 1.2em; margin-bottom: -2px; margin-right: 8px;"
 		src="/assets/icons/gitlab.svg"
 		alt="GitLab"
 	/>
 	<i>Powered by awesome GitLab!</i>
-</p>
+</p> -->
