Updated home page with more content

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -62,7 +62,7 @@
 						target="_blank"
 						href="https://docs.tivolicloud.com/worlds/host-a-world-advanced"
 					>
-						how to host a world
+						how to host a world (advanced)
 					</a>
 				</h2>
 			</div>
@@ -84,12 +84,6 @@
 				/>
 			</div>
 			<div class="col">
-				<img
-					src="https://dummyimage.com/1920x1005&text=%20"
-					alt="Silence"
-				/>
-			</div>
-			<div class="col">
 				<img src="/assets/screenshots/solace.jpg" alt="Solace" />
 				<p>Solace by Monoglu</p>
 			</div>
@@ -98,7 +92,14 @@
 					src="/assets/screenshots/tanks-corner-bar.jpg"
 					alt="Tank's Corner Bar"
 				/>
-				<p>Tank's Corner Bar 🍸</p>
+				<p>Tank's Corner Bar</p>
+			</div>
+			<div class="col">
+				<img
+					src="/assets/screenshots/lockdown-dance-party.jpg"
+					alt="Lockdown Dance Party"
+				/>
+				<p>Xaos' Lockdown Dance Party</p>
 			</div>
 		</div>
 	</div>
@@ -111,10 +112,21 @@
 					<mat-icon>group</mat-icon> Hundreds of people in the same
 					space
 				</h1>
-				<h2></h2>
+				<h2>
+					<a
+						href="https://www.highfidelity.com/blog/latest-load-test-hits-423-so-whats-next-8b7fd85c234c"
+						target="_blank"
+						>Up to 400+ concurrently moving and talking people</a
+					>
+					can interact together in the same space. Powered by highly
+					customizable and scalable software for any occasion.
+				</h2>
 			</div>
 			<div class="col-md-5">
-				<img src="https://dummyimage.com/1920x540&text=%20" alt="" />
+				<img
+					src="/assets/screenshots/hifi-load-test.jpg"
+					alt="Hifi's load test"
+				/>
 			</div>
 		</div>
 	</div>
@@ -129,20 +141,20 @@
 				</h1>
 				<h2>
 					Be together with your friends and family and truly feel
-					their presence. It's incomparable to video calling because
-					you can naturally express yourself more than you'd believe.
+					their presence. It's incomparable to video calling as you
+					can naturally express yourself more than you'd believe.
 				</h2>
 			</div>
 			<div class="col-md-5">
 				<img
 					src="/assets/screenshots/fairies.jpg"
-					alt="Two cute fairies"
+					alt="Two people hugging"
 				/>
 			</div>
 		</div>
 	</div>
 </div>
-<div class="info">
+<!-- <div class="info">
 	<div class="container">
 		<div class="row align-items-center">
 			<div class="col-md-7">
@@ -157,7 +169,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 <div class="info">
 	<div class="container">
 		<div class="row align-items-center">
@@ -166,10 +178,17 @@
 					<mat-icon>developer_board</mat-icon> Extensive platform for
 					developers
 				</h1>
-				<h2></h2>
+				<h2>
+					Use JavaScript (TypeScript soon) to make almost anything you
+					can imagine. Script entire experiences, tablet apps and
+					playable games.
+				</h2>
 			</div>
 			<div class="col-md-5">
-				<img src="https://dummyimage.com/1920x540&text=%20" alt="" />
+				<img
+					src="/assets/screenshots/scripting-code-sample.png"
+					alt="Scripting code sample"
+				/>
 			</div>
 		</div>
 	</div>
@@ -192,7 +211,8 @@
 					<br />
 					Use Tivoli however you like for any purpose.
 					<br /><br />
-					Written using C++ with Qt and JavaScript, you can find the
+					Written using C++ with Qt and JavaScript, feel free to
+					contribute! Find the
 					<a
 						target="_blank"
 						href="https://git.tivolicloud.com/tivolicloud/interface"
