Added roadmap to header

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -77,6 +77,15 @@
 				/>
 				GitLab
 			</button>
+
+			<a
+				class="menu-item white"
+				href="https://roadmap.tivolicloud.com"
+				target="_blank"
+				mat-button
+			>
+				<mat-icon>map</mat-icon> Roadmap
+			</a>
 		</div>
 
 		<span style="flex-grow: 1;"></span>
